unpackaged/objects/Lead.object
<CustomObject>
  <fields>
    <fullName>State_Province__c</fullName>
    <description>Picklist dependent on Country</description>
    <label>State/Province</label>
    <type>Picklist</type>
    <valueSet>
      <controllingField>Country_Lead__c</controllingField>
      <valueSetDefinition>
        <value>
          <fullName>AL</fullName>
        </value>
        <value>
          <fullName>AK</fullName>
        </value>
        <value>
          <fullName>AZ</fullName>
        </value>
        <value>
          <fullName>AR</fullName>
        </value>
        <value>
          <fullName>CA</fullName>
        </value>
        <value>
          <fullName>CO</fullName>
        </value>
        <value>
          <fullName>CT</fullName>
        </value>
        <value>
          <fullName>DE</fullName>
        </value>
        <value>
          <fullName>FL</fullName>
        </value>
        <value>
          <fullName>GA</fullName>
        </value>
        <value>
          <fullName>HI</fullName>
        </value>
        <value>
          <fullName>ID</fullName>
        </value>
        <value>
          <fullName>IL</fullName>
        </value>
        <value>
          <fullName>IN</fullName>
        </value>
        <value>
          <fullName>IA</fullName>
        </value>
        <value>
          <fullName>KS</fullName>
        </value>
        <value>
          <fullName>KY</fullName>
        </value>
        <value>
          <fullName>LA</fullName>
        </value>
        <value>
          <fullName>ME</fullName>
        </value>
        <value>
          <fullName>MD</fullName>
        </value>
        <value>
          <fullName>MA</fullName>
        </value>
        <value>
          <fullName>MI</fullName>
        </value>
        <value>
          <fullName>MN</fullName>
        </value>
        <value>
          <fullName>MS</fullName>
        </value>
        <value>
          <fullName>MO</fullName>
        </value>
        <value>
          <fullName>MT</fullName>
        </value>
        <value>
          <fullName>NE</fullName>
        </value>
        <value>
          <fullName>NV</fullName>
        </value>
        <value>
          <fullName>NH</fullName>
        </value>
        <value>
          <fullName>NJ</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Suffix__c</fullName>
    <description>Suffix to the Lead Name</description>
    <label>Suffix</label>
    <length>20</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Target_Type__c</fullName>
    <label>Target Type</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Dental laboratory owner</fullName>
        </value>
        <value>
          <fullName>Dental Technician</fullName>
        </value>
        <value>
          <fullName>Dentist not involved in implants</fullName>
        </value>
        <value>
          <fullName>Dentist primarily doing both surgery and pros (implantologist)</fullName>
        </value>
        <value>
          <fullName>Dentist primarily doing only the restorative portion</fullName>
        </value>
        <value>
          <fullName>Surgeon doing primarily only the surgical portion</fullName>
        </value>
        <value>
          <fullName>Dental Other (i.e. Auxiliary staff Nurse, Hygienist etc.)</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Territory__c</fullName>
    <description>Dependant on Region</description>
    <label>Territory</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>ANGLIA</fullName>
        </value>
        <value>
          <fullName>EAST MIDLANDS</fullName>
        </value>
        <value>
          <fullName>KEY ACS</fullName>
        </value>
        <value>
          <fullName>MIDLANDS</fullName>
        </value>
        <value>
          <fullName>N IRELAND</fullName>
        </value>
        <value>
          <fullName>NE THAMES</fullName>
        </value>
        <value>
          <fullName>NORTH EAST</fullName>
        </value>
        <value>
          <fullName>NORTH THAMES</fullName>
        </value>
        <value>
          <fullName>NORTH WEST</fullName>
        </value>
        <value>
          <fullName>NORTH YORKSHIRE</fullName>
        </value>
        <value>
          <fullName>NORTHERN IRELAND</fullName>
        </value>
        <value>
          <fullName>NW THAMES</fullName>
        </value>
        <value>
          <fullName>SCOTLAND</fullName>
        </value>
        <value>
          <fullName>SE THAMES</fullName>
        </value>
        <value>
          <fullName>SOUTH THAMES</fullName>
        </value>
        <value>
          <fullName>SOUTH WEST</fullName>
        </value>
        <value>
          <fullName>SW THAMES</fullName>
        </value>
        <value>
          <fullName>WALES</fullName>
        </value>
        <value>
          <fullName>WESSEX</fullName>
        </value>
        <value>
          <fullName>WEST</fullName>
        </value>
        <value>
          <fullName>WEST MIDLANDS</fullName>
        </value>
        <value>
          <fullName>WEST SCOTLAND</fullName>
        </value>
        <value>
          <fullName>Daytona Beach</fullName>
        </value>
        <value>
          <fullName>Ft. Lauderdale</fullName>
        </value>
        <value>
          <fullName>Miami N.</fullName>
        </value>
        <value>
          <fullName>Miami S.</fullName>
        </value>
        <value>
          <fullName>Orlando</fullName>
        </value>
        <value>
          <fullName>Palm Beach/Boca Raton</fullName>
        </value>
        <value>
          <fullName>Petersburg/Ft. Myers</fullName>
        </value>
        <value>
          <fullName>Tampa</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Topic_SP__c</fullName>
    <label>Topic (SP)</label>
    <length>128</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>WC2012_ID__c</fullName>
    <label>WC2012 ID</label>
    <length>10</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>WhenCollected__c</fullName>
    <defaultValue>If($User.FirstName = 'Eloqua' &amp;&amp; $User.LastName = 'Integration',now(),null)</defaultValue>
    <label>When collected?</label>
    <type>DateTime</type>
  </fields>
  <fields>
    <fullName>WhereCollected__c</fullName>
    <defaultValue>If($User.FirstName = 'Eloqua' &amp;&amp; $User.LastName = 'Integration','Eloqua Web Form',null)</defaultValue>
    <label>Where collected?</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>temporary_convert__c</fullName>
    <label>temporary convert</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <listViews>
    <fullName>QueueUnassignedLeadsQueue</fullName>
    <columns>Lead_Source_Serial__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>Country_Lead__c</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>Profession__c</columns>
    <columns>LEAD.STREET</columns>
    <columns>LEAD.ZIP</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.PHONE</columns>
    <columns>Product_Area__c</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>Queue: Unassigned Leads Queue</label>
    <language>en_US</language>
    <queue>UnassignedLeadsQueue</queue>
    <sharedTo>
      <group>DI_System_Administrators</group>
    </sharedTo>
  </listViews>
  <listViews>
    <fullName>x10MyUnreadLeads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.PHONE</columns>
    <columns>Profession__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.STATUS</columns>
    <filterScope>Mine</filterScope>
    <filters>
      <field>LEAD.UNREAD</field>
      <operation>equals</operation>
      <value>1</value>
    </filters>
    <label>My Unread Leads</label>
    <language>en_US</language>
    <sharedTo>
      <group>ViewsinEnglish</group>
    </sharedTo>
  </listViews>
  <recordTypes>
    <active>true</active>
    <businessProcess>DIH Std Lead Process</businessProcess>
    <fullName>Astra_Tech_Std_Leads</fullName>
    <label>Standard Lead</label>
  </recordTypes>
  <recordTypes>
    <active>true</active>
    <businessProcess>DIH Std Lead Process</businessProcess>
    <fullName>Digital_Marketing_Lead</fullName>
    <label>Digital Marketing Lead</label>
  </recordTypes>
  <recordTypes>
    <active>true</active>
    <businessProcess>SimPlant Lead Process</businessProcess>
    <fullName>SimPlant_Leads</fullName>
    <label>SimPlant Leads</label>
  </recordTypes>
  <recordTypes>
    <active>true</active>
    <businessProcess>WC2012 Process</businessProcess>
    <fullName>World_Congress_2012_Participant</fullName>
    <label>World Congress 2012 Participant</label>
  </recordTypes>
  <sharingModel>Private</sharingModel>
</CustomObject>